--- a/jupyter_notebooks/test.ipynb
+++ b/jupyter_notebooks/test.ipynb
@@ -2,13 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "a5a6915c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92f1ffc4",
+   "metadata": {},
+   "source": [
+    "### The first step is to download the data from the Kaggle website. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cea2d7f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
