Add uncleaned csv dataset to repository

--- a/jupyter_notebooks/test.ipynb
+++ b/jupyter_notebooks/test.ipynb
@@ -1,28 +1,31 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "a5a6915c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd \n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "92f1ffc4",
    "metadata": {},
    "source": [
     "### The first step is to download the data from the Kaggle website. \n",
-    "\n"
+    "[This a description for the link](https://www.kaggle.com/datasets/manjeetsingh/retaildataset)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "e2d60fff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cea2d7f9",
+   "id": "fca1df85",
    "metadata": {},
    "outputs": [],
    "source": []
