Add cleaned data to separate file

--- a/jupyter_notebooks/test.ipynb
+++ b/jupyter_notebooks/test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 35,
    "id": "e2d60fff",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 36,
    "id": "fca1df85",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
        "[8190 rows x 12 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 37,
    "id": "41ee0b86",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
        "[421570 rows x 5 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "id": "c7dd4ce9",
    "metadata": {},
    "outputs": [
@@ -795,7 +795,7 @@
        "44     45    B  118221"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 39,
    "id": "48f273ed",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1056,7 @@
        "[2069 rows x 12 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 40,
    "id": "195e6243",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 41,
    "id": "5158f7fc",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1253,7 @@
        "[421570 rows x 5 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 42,
    "id": "cad26083",
    "metadata": {},
    "outputs": [
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 43,
    "id": "4a6b6d2f",
    "metadata": {},
    "outputs": [
@@ -1654,7 +1654,7 @@
        "44     45    B  118221"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 44,
    "id": "dc93d94c",
    "metadata": {},
    "outputs": [
@@ -1695,6 +1695,51 @@
    "metadata": {},
    "source": [
     "#### The stores dataset does not contain any NaN values. Therefore, all three csv datasets have been cleaned."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8c64eb1",
+   "metadata": {},
+   "source": [
+    "#### The cleaned datasets will be moved to a separate folder, so raw data will not get mixed up. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "40ea4ea9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.to_csv(\"../data/cleaned-data/cleaned_features_dataset.csv\", index=False) # This will save the cleaned DataFrame to a new CSV file\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "0e66c57e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../data/raw-data/sales_dataset.csv\")#Find the correct link to the dataset\n",
+    "\n",
+    "df\n",
+    "df.to_csv(\"../data/cleaned-data/cleaned_sales_dataset.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "6633f4f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../data/raw-data/stores_dataset.csv\")#Find the correct link to the dataset\n",
+    "\n",
+    "df\n",
+    "df.to_csv(\"../data/cleaned-data/cleaned_stores_dataset.csv\", index=False)"
    ]
   }
  ],
