--- a/jupyter_notebooks/test.ipynb
+++ b/jupyter_notebooks/test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "e2d60fff",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "fca1df85",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "[8190 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "41ee0b86",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "[421570 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "c7dd4ce9",
    "metadata": {},
    "outputs": [
@@ -796,7 +796,7 @@
        "44     45    B  118221"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "48f273ed",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1057,7 @@
        "[2069 rows x 12 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "195e6243",
    "metadata": {},
    "outputs": [
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "5158f7fc",
    "metadata": {},
    "outputs": [
@@ -1254,7 +1254,7 @@
        "[421570 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "cad26083",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "4a6b6d2f",
    "metadata": {},
    "outputs": [
@@ -1655,7 +1655,7 @@
        "44     45    B  118221"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "id": "dc93d94c",
    "metadata": {},
    "outputs": [
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "id": "40ea4ea9",
    "metadata": {},
    "outputs": [],
@@ -1719,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "0e66c57e",
    "metadata": {},
    "outputs": [],
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "id": "6633f4f1",
    "metadata": {},
    "outputs": [],
@@ -1753,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "65cc72bd",
    "metadata": {},
    "outputs": [
@@ -1993,7 +1993,7 @@
        "[2069 rows x 12 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2019,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "ae1819f0",
    "metadata": {},
    "outputs": [
@@ -7056,7 +7056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "id": "2205cf26",
    "metadata": {},
    "outputs": [
@@ -18354,6 +18354,66 @@
     "fig = px.scatter(df, x=\"Fuel_Price\", y=\"CPI\", color=\"CPI\",\n",
     "                 trendline=\"ols\")\n",
     "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19db7c52",
+   "metadata": {},
+   "source": [
+    "#### The features and sales datasets have been merged, as can been seen below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "8a3f5431",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Store       Date  Temperature  Fuel_Price  MarkDown1  MarkDown2  MarkDown3  \\\n",
+      "0      1 2011-11-11        59.11       3.297    10382.9    6115.67     215.07   \n",
+      "1      1 2011-11-11        59.11       3.297    10382.9    6115.67     215.07   \n",
+      "2      1 2011-11-11        59.11       3.297    10382.9    6115.67     215.07   \n",
+      "3      1 2011-11-11        59.11       3.297    10382.9    6115.67     215.07   \n",
+      "4      1 2011-11-11        59.11       3.297    10382.9    6115.67     215.07   \n",
+      "\n",
+      "   MarkDown4  MarkDown5         CPI  Unemployment  IsHoliday_x  Dept  \\\n",
+      "0    2406.62    6551.42  217.998085         7.866        False   1.0   \n",
+      "1    2406.62    6551.42  217.998085         7.866        False   2.0   \n",
+      "2    2406.62    6551.42  217.998085         7.866        False   3.0   \n",
+      "3    2406.62    6551.42  217.998085         7.866        False   4.0   \n",
+      "4    2406.62    6551.42  217.998085         7.866        False   5.0   \n",
+      "\n",
+      "   Weekly_Sales IsHoliday_y  \n",
+      "0      18689.54       False  \n",
+      "1      44936.47       False  \n",
+      "2       9959.64       False  \n",
+      "3      36826.52       False  \n",
+      "4      31002.65       False  \n"
+     ]
+    }
+   ],
+   "source": [
+    "sales_df = pd.read_csv(\"../data/cleaned-data/cleaned_features_dataset.csv\")\n",
+    "features_df = pd.read_csv(\"../data/cleaned-data/cleaned_sales_dataset.csv\")\n",
+    "sales_df[\"Date\"] = pd.to_datetime(sales_df[\"Date\"],dayfirst=True)\n",
+    "features_df[\"Date\"] = pd.to_datetime(features_df[\"Date\"],dayfirst=True)\n",
+    "merge_df = pd.merge(sales_df, features_df, on=[\"Store\", \"Date\"], how=\"left\")\n",
+    "print(merge_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "7c92aec7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge_df.to_csv(\"../data/cleaned-data/merged_dataset.csv\", index=False)"
    ]
   }
  ],
