--- a/jupyter_notebooks/test.ipynb
+++ b/jupyter_notebooks/test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 109,
    "id": "e2d60fff",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 110,
    "id": "fca1df85",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "[8190 rows x 12 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 111,
    "id": "41ee0b86",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "[421570 rows x 5 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 112,
    "id": "c7dd4ce9",
    "metadata": {},
    "outputs": [
@@ -796,7 +796,7 @@
        "44     45    B  118221"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 113,
    "id": "48f273ed",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1057,7 @@
        "[2069 rows x 12 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 114,
    "id": "195e6243",
    "metadata": {},
    "outputs": [
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 115,
    "id": "5158f7fc",
    "metadata": {},
    "outputs": [
@@ -1254,7 +1254,7 @@
        "[421570 rows x 5 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 116,
    "id": "cad26083",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 117,
    "id": "4a6b6d2f",
    "metadata": {},
    "outputs": [
@@ -1655,7 +1655,7 @@
        "44     45    B  118221"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 118,
    "id": "dc93d94c",
    "metadata": {},
    "outputs": [
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 119,
    "id": "40ea4ea9",
    "metadata": {},
    "outputs": [],
@@ -1719,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 120,
    "id": "0e66c57e",
    "metadata": {},
    "outputs": [],
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 121,
    "id": "6633f4f1",
    "metadata": {},
    "outputs": [],
@@ -1753,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 122,
    "id": "65cc72bd",
    "metadata": {},
    "outputs": [
@@ -1993,7 +1993,7 @@
        "[2069 rows x 12 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2019,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 123,
    "id": "ae1819f0",
    "metadata": {},
    "outputs": [
@@ -7056,7 +7056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 124,
    "id": "2205cf26",
    "metadata": {},
    "outputs": [
@@ -18366,7 +18366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 125,
    "id": "8a3f5431",
    "metadata": {},
    "outputs": [
@@ -18408,7 +18408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 126,
    "id": "7c92aec7",
    "metadata": {},
    "outputs": [],
@@ -18418,7 +18418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 127,
    "id": "f081f66d",
    "metadata": {},
    "outputs": [
@@ -18458,7 +18458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 128,
    "id": "02e370af",
    "metadata": {},
    "outputs": [
@@ -18496,7 +18496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 129,
    "id": "9dd93fc8",
    "metadata": {},
    "outputs": [
@@ -18534,7 +18534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 130,
    "id": "ad34e1d3",
    "metadata": {},
    "outputs": [
@@ -18560,7 +18560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 131,
    "id": "0ef9ce57",
    "metadata": {},
    "outputs": [
@@ -18584,7 +18584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 132,
    "id": "941a71d1",
    "metadata": {},
    "outputs": [
@@ -18594,7 +18594,7 @@
        "<Axes: xlabel='Weekly_Sales', ylabel='Count'>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -18614,8 +18614,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3d182d0c",
+   "metadata": {},
+   "source": [
+    "#### The above histogram highlights the that there a few weeks where sales are high at low prices and / or holidays. This is further underlined because it is skewed to the left and reflects a spike in sales."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 133,
    "id": "b2cbf588",
    "metadata": {},
    "outputs": [
@@ -18653,7 +18661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 134,
    "id": "ae3ddd95",
    "metadata": {},
    "outputs": [
